logs/inversiontest.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/InversionTest'...
Compiling './lib/python3.5/site-packages/InversionTest/MonteCarloSampler.py'...
***   File "./lib/python3.5/site-packages/InversionTest/MonteCarloSampler.py", line 133
    print "Warning: Maximum samples for Monte Carlo was very low, got: %s"%(maxSamples,)
                                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/InversionTest/Tests'...
Compiling './lib/python3.5/site-packages/InversionTest/Tests/StatisticalTests_UnitTests.py'...
***   File "./lib/python3.5/site-packages/InversionTest/Tests/StatisticalTests_UnitTests.py", line 176
    print x, y, pVal
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/InversionTest-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
